CSS/style.css
:root{
	--primary: #ddd;
	--dark: #333;
	--light: #fff;
	--shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
}

html{
	-webkit-box-sizing:border-box;
       -moz-box-sizing:border-box;
	        box-sizing:border-box;
	font-family: Arial, Helvetica, sans-serif;
	color: var(--dark);
	margin: 0;
	padding: 0;
}

body{
	background: #ccc;
	margin:30px 50px;
	line-height: 1.4;
}

.btn{
	background: var(--dark);
	color: var(--light);
	padding: 0.6rem 1.3rem;
	text-decoration: none;
	border: 0;
}

img{
	max-width: 100%;
}

.wrapper{
	display: -ms-grid;
	display: grid;
	grid-gap: 20px;
}

/* Navigation */
.main-nav ul{
	display: -ms-grid;
	display: grid;
	-ms-grid-columns: (1fr)[4];
	    grid-template-columns: repeat(4, 1fr);
	grid-gap: 20px;
	list-style: none;
	padding: 0;
}

.main-nav a{
	color: var(--dark);
	font-size: 1.1rem;
	text-decoration: none;
	background: var(--primary);
	display: block;
	padding: .8rem;
	text-align: center;
	text-transform: uppercase;
	-webkit-box-shadow: var(--shadow);
	        box-shadow: var(--shadow)
}

.main-nav a:hover{
	background: var(--dark);
	color: var(--light);
}

/* Top Container */
.top-container{
	display: -ms-grid;
	display: grid;
	grid-gap: 20px;
	    grid-template-areas: 
		'showcase showcase top-box-a'
		'showcase showcase top-box-b';	
}

/* Showcase */
.showcase{
	-ms-grid-row: 1;
	-ms-grid-row-span: 2;
	-ms-grid-column: 1;
	-ms-grid-column-span: 2;
	grid-area: showcase;	
	min-height: 400px;
	background: url("../assets/pic1.jpeg");
	-webkit-background-size: cover;
	        background-size: cover;
	padding: 3rem;
	background-position: center;
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-webkit-flex-direction: column;
	    -ms-flex-direction: column;
	        flex-direction: column;
	-webkit-box-align: start;
	-webkit-align-items: flex-start;
	    -ms-flex-align: start;
	        align-items: flex-start;
	-webkit-box-pack: center;
	-webkit-justify-content: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	-webkit-box-shadow: var(--shadow);
	        box-shadow: var(--shadow);
}

.showcase h1{
	font-size: 4rem;
	margin-bottom: 0;
	color: var(--light);
}

.showcase p{
	font-size: 1.3rem;
	margin-top: 0;
	color: var(--light);
}

/* Top Boxes */
.top-box{
	display: -ms-grid;
	display: grid;
	background: var(--primary);
	-webkit-box-align: center;
	-webkit-align-items: center;
	    -ms-flex-align: center;
	        align-items: center;
	justify-items: center;
	padding: 3rem;
	-webkit-box-shadow: var(--shadow);
	        box-shadow: var(--shadow);
}

.top-box .price{
	font-size: 2.5rem;
}

.top-box-a{
	-ms-grid-row: 1;
	-ms-grid-column: 3;
	grid-area: top-box-a;
}

.top-box-b{
	-ms-grid-row: 2;
	-ms-grid-column: 3;
	grid-area: top-box-b;
}

/* Boxes */
.boxes{
	display: -ms-grid;
	display: grid;
	grid-gap: 20px;
	-ms-grid-columns: (minmax(200px,1fr))[auto-fit];
	    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
}

.box{
	background: var(--primary);
	padding: 1.5rem 2rem;
	text-align: center;
	-webkit-box-shadow: var(--shadow);
	        box-shadow: var(--shadow);
}

/* Info */
.info{
	display: -ms-grid;
	display: grid;
	grid-gap: 30px;
	-ms-grid-columns: (1fr)[2];
	    grid-template-columns: repeat(2, 1fr);
	background: var(--primary);
	-webkit-box-shadow: var(--shadow);
	        box-shadow: var(--shadow);
	padding: 3rem;
}

/* Portfolio */
.portfolio{
	display: -ms-grid;
	display: grid;
	grid-gap: 20px;
	-ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
	    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
}

.portfolio img{
	width: 100%;
	-webkit-box-shadow: var(--shadow);
	        box-shadow: var(--shadow);
}

/* Footer */
footer{
	background: var(--dark);
	color: var(--light);
	margin-top: 2rem;
	text-align: center;
	padding: 1rem;
}

/* Media Queries */
@media (max-width: 700px) {
	body{
		margin: 10px 20px;
	}

	.top-container{
		    grid-template-areas: 
			'showcase showcase'
			'top-box-a top-box-b';
	}
	.showcase h1{
			font-size: 2.5rem;
	}

	.main-nav ul{
		-ms-grid-columns: 1fr 1fr;
		    grid-template-columns: 1fr 1fr;
	}

	.info{
		-ms-grid-columns: 1fr;
		    grid-template-columns: 1fr;
	}

	.info .btn{
		display: block;
		text-align: center;
		margin: auto;
	}
}

@media (max-width: 500px) {
	body{
		margin: 5px 5px;
	}

	.main-nav ul{
		-ms-grid-columns: 1fr;
		    grid-template-columns: 1fr;
	}

	.top-container{
		    grid-template-areas: 
			'showcase'
			'top-box-a'
			'top-box-b';
	}
}

